# ir-spectra-analyzer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IR_Spectral_Software_Architecture.md  LICENSE  PROJECT_STATE.md  README.md  conftest.py  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  application.py  batch_pdf_export.py  batch_project_generation.py  batch_project_pdf_export.py  config.py  output_path_policy.py  reference_import.py  reference_library_service.py  report_presets.py  runtime_imports.py  web_reference_import.py
assets/: icon.icns
chemistry/: __init__.py  editor_bridge.py  structure_model.py  structure_renderer.py
core/: __init__.py  consensus.py  functional_groups.py  interpretation.py  metadata.py  peak.py  peak_assignments.py  project.py  spectrum.py  vibration_presets.py
file_io/: csv_exporter.py  format_registry.py  jcamp_reader.py  spa_binary.py  spa_reader.py  xlsx_exporter.py
io/: __init__.py  csv_exporter.py  format_registry.py  project_io.py  spa_binary.py  spa_reader.py  xlsx_exporter.py
matching/: __init__.py  database.py  feature_store.py  preprocessing.py  quality.py  search_engine.py  similarity.py
packaging/: dmg_settings.py  installer.iss  ir-spectra-analyzer-mac.spec  ir-spectra-analyzer.spec
processing/: __init__.py  baseline.py  consensus_analysis.py  functional_group_scoring.py  interpolation.py  normalization.py  peak_detection.py  smoothing.py  unit_conversion.py
reporting/: __init__.py  pdf_generator.py  report_builder.py  report_template.py  spectrum_renderer.py
scripts/: build_icon.py
storage/: __init__.py  database.py  functional_group_repository.py  migrations.py  project_serializer.py  settings.py
tests/: __init__.py  jsme_custom_element_probe.py  manual_qa_script.py  qa_jsme_editor.py  test_baseline.py  test_batch_import_dialog.py  test_batch_pdf_export.py  test_batch_project_generation.py  test_batch_project_pdf_export.py  test_commands.py  test_consensus_analysis.py  test_consensus_main_window.py  test_consensus_panel.py  test_csv_exporter.py  test_database.py  test_functional_group_main_window.py  test_functional_group_scoring.py  test_jcamp_reader.py  test_main_window.py  test_match_results_panel.py  test_matching.py  test_molecule_editor.py  test_molecule_widget.py  test_nist_webbook_import.py  test_pdf_generator.py  test_peak_detection.py  test_project_serializer.py  test_reference_library_dialog.py  test_reference_library_service.py  test_reference_library_worker.py  test_report_presets.py  test_runtime_imports.py  test_spa_reader.py  test_structure_renderer.py  test_web_reference_import_dialog.py  test_xlsx_exporter.py
ui/: __init__.py  consensus_panel.py  functional_group_panel.py  main_window.py  (+10 more)
(+75 files in other folders)
