[project]
name = "ir-spectra-analyzer"
version = "0.1.0"
description = "Professional desktop software for IR spectrum analysis and interpretation"
requires-python = ">=3.11"

dependencies = [
    "PySide6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "spectrochempy>=0.7.0",
    "reportlab>=4.2.0",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ir-spectra = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
